--- a/catkin_ws/src/ball_chaser/package.xml
+++ b/catkin_ws/src/ball_chaser/package.xml
@@ -48,6 +48,10 @@
   <!--   <test_depend>gtest</test_depend> -->
   <!-- Use doc_depend for packages you need only for building documentation: -->
   <!--   <doc_depend>doxygen</doc_depend> -->
+  <depend>sensor_msgs</depend>
+  <depend>opencv4</depend>
+  <depend>cv_bridge</depend>
+  <depend>image_transport</depend>
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>message_generation</build_depend>
   <build_depend>roscpp</build_depend>
