--- a/catkin_ws/src/ball_chaser/CMakeLists.txt
+++ b/catkin_ws/src/ball_chaser/CMakeLists.txt
@@ -225,3 +225,7 @@ add_dependencies(drive_bot simple_arm_generate_messages_cpp)
 add_executable(process_image src/process_image.cpp)
 target_link_libraries(process_image ${catkin_LIBRARIES} ${OpenCV_INCLUDE_DIRS})
 add_dependencies(process_image simple_arm_generate_messages_cpp)
+
+add_executable(image_converter src/image_converter.cpp)
+target_link_libraries(image_converter ${catkin_LIBRARIES} ${OpenCV_INCLUDE_DIRS})
+add_dependencies(process_image simple_arm_generate_messages_cpp)
